# exoplanet-parameter-estimation-model

./: .gitignore  README.md  pyproject.toml
data/archived_observations/: README.md  star-masses.csv
data/nasa_exoplanet_archive/: 51_peg.csv  70_vir.csv  README.md  catalog.json  hd_209458.csv  hd_3651.csv
data/polygence/: README.md  star0.csv  star1.csv  star2.csv  star3.csv
docs/: exoplanet_showcase_report.bbl  exoplanet_showcase_report.tex  figure_macros.tex  references.bib
docs/figures/plotdata/: 51_peg_fit_orbit.csv  51_peg_fit_rv_model.csv  51_peg_fit_rv_obs.csv  70_vir_fit_orbit.csv  70_vir_fit_rv_model.csv  70_vir_fit_rv_obs.csv  archived_star0_fit_orbit.csv  archived_star0_fit_rv_model.csv  archived_star0_fit_rv_obs.csv  archived_star1_fit_orbit.csv  archived_star1_fit_rv_model.csv  archived_star1_fit_rv_obs.csv  archived_star2_fit_orbit.csv  archived_star2_fit_rv_model.csv  archived_star2_fit_rv_obs.csv  archived_star3_fit_orbit.csv  archived_star3_fit_rv_model.csv  archived_star3_fit_rv_obs.csv  hd_209458_fit_orbit.csv  hd_209458_fit_rv_model.csv  hd_209458_fit_rv_obs.csv  hd_3651_fit_orbit.csv  hd_3651_fit_rv_model.csv  hd_3651_fit_rv_obs.csv  public_fit_summary.json  rv_fit_preview_convergence.csv  rv_fit_preview_orbit.csv  rv_fit_preview_rv_model.csv  rv_fit_preview_rv_obs.csv
examples/: export_fit_evolution_gif.py  export_paper_figures.py  fit_archived_star.py  fit_polygence_star.py  fit_public_star.py  fit_synthetic.py
src/exoplanet_est/: __init__.py  constants.py  data.py  doppler.py  keplerian.py  nbody.py  optimize.py  plot.py
